--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <h1>Leave Your Feedback</h1>
+    <form id="feedbackForm">
+        <input type="text" id="name" placeholder="Your Name" required><br>
+        <input type="email" id="email" placeholder="Your Email" required><br>
+        <textarea id="message" placeholder="Your Feedback" required></textarea><br>
+        <button type="submit">Submit</button>
+    </form>
+
+    <h2>All Feedback</h2>
+    <div id="feedbackList"></div>
 
     <script src="script.js"></script>
 </body>
